Kubernetes/Bookstack/yamls/bookstack-deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bookstack
  labels:
    name: bookstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
    app.kubernetes.io/name: bookstack
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
        app.kubernetes.io/name: bookstack
    spec:
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: bookstack-data
      volumes:
        - name: bookstack-data
          persistentVolumeClaim:
            claimName: bookstack-pvc
---
kind: Service
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: bookstack
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bookstack-https-redirect
  namespace: bookstack
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bookstack-security
  namespace: bookstack
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-websecure
  namespace: bookstack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bookstack.domain.com`)
      services:
        - name: bookstack
          port: 80
          serversTransport: bookstack-transport
      middlewares:
        - name: bookstack-security
  tls:
    secretName: bookstack-domain-com
    options:
      name: bookstack-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack-web
  namespace: bookstack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`bookstack.domain.com`)
      services:
        - name: bookstack
          port: 80
      middlewares:
        - name: bookstack-https-redirect
